# momentum

./: README.md  imghdr.py  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: daily_update.yml  run_backtest.yml  run_backtests.yml  seed_history.yml  update_data.yml
artifacts/: action_list.parquet  backtest_equity_A.parquet  backtest_equity_B.parquet  backtest_equity_C.parquet  backtest_equity_combined.parquet  backtest_equity_system1.parquet  backtest_equity_system2.parquet  backtest_equity_system3.parquet  backtest_positions.parquet  backtest_signals.parquet  backtest_stats.json  backtest_stats_A.json  backtest_stats_B.json  backtest_stats_C.json  backtest_trades.parquet  backtest_trades_A.parquet  backtest_trades_B.parquet  backtest_trades_C.parquet  bucketC_history.parquet  bucketC_preview_latest.parquet  bucketC_stats.parquet  bucketC_trade_stats.parquet  bucketC_trades.parquet  dailyA.parquet  dailyB.parquet  daily_signals.parquet  fib_signals.parquet  index_returns_5y.parquet  metadata.json  momentum_bucketc_signals.parquet  scoreB.parquet  today_A.parquet  today_B.parquet  today_C.parquet  trade_stats_A.json  trade_stats_B.json  trade_stats_C.json  weekly_swing_signals.parquet  yahoo_metadata.parquet
backtest/: run_backtest.py
core/: backtest.py  data.py  data_utils.py  features.py  momentum_utils.py  selection.py
updater/: __init__.py  golden_source_validation.py  run_backtest.py  run_backtest_from_signals.py  run_backtest_systems.py  run_daily.py  run_daily_pipeline.py  seed_backtest_history.py  seed_today.py  update_parquet.py
