[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "imghdr-shim"
version = "0.1.0"
description = "Compatibility shim for the removed stdlib imghdr module."
requires-python = ">=3.8"
dependencies = ["pillow>=9"]

[tool.setuptools]
py-modules = ["imghdr"]
